Drupal x.x.x, xxxx-xx-xx
------------------------

- added support for the MetaWeblog API and MoveableType extensions.
- comment module:
    * made it possible to disable the "comment viewing controls".
- performance:
    * improved module loading when serving cached pages.
    * made it possible to automatically disable blocks when under heavy load.
- theme system:
    * made all theme functions start with 'theme_'.
    * made all theme functions return their output.
    * migrated away from using the BaseTheme class.
    * added many new theme functions and refactored existing theme functions.
- usability:
    * added breadcrumb navigation to all pages.
    * made it possible to add context-sensitive help to all pages.
    * replaced drop-down menus by radio buttons where appropriate.
    * removed the 'magic_quotes_gpc = 0' requirement.
- accessibility:
    * made themes degrade gracefully in absence of CSS.
    * grouped form elements using '<fieldset>' and '<legend>' tags.
    * added '<label>' tags to form elements.
- documentation:
    * added PHPDoc/Doxygen comments.

Drupal 4.3.0, 2003-11-01
------------------------

- added support for configurable URLs.
- added support for sortable table columns.
- database backend:
    * added support for selective database table prefixing.
- performance:
    * optimized many SQL queries for speed by converting left joins to inner joins.
- comment module:
    * rewrote the comment housekeeping code to be much more efficient and scalable.
    * changed the comment module to use the standard pager.
- user module:
    * added support for multiple sessions per user.
    * added support for anonymous user sessions.
- forum module:
    * improved the forum views and the themability thereof.
- book module:
    * improved integration of non-book nodes in the book outline.
- usability:
    * added support for "mass node operations" to ease repetitive tasks.