@@ -299,7 +299,8 @@ CREATE TABLE [dbo].[system] (
   [name] [varchar] (255) NOT NULL ,
   [type] [varchar] (255) NOT NULL ,
   [description] [varchar] (255) NOT NULL ,
-  [status] [int] NOT NULL
+  [status] [int] NOT NULL ,
+  [throttle] [smallint] NOT NULL ,
   [bootstrap] [int] NOT NULL
 ) ON [PRIMARY]
 GO
@@ -487,10 +488,10 @@ INSERT INTO system VALUES ('modules/node.module','node','module','',1,0);
 INSERT INTO system VALUES ('modules/page.module','page','module','',1,0);
 INSERT INTO system VALUES ('modules/story.module','story','module','',1,0);
 INSERT INTO system VALUES ('modules/taxonomy.module','taxonomy','module','',1,0);
-INSERT INTO system VALUES ('themes/marvin/marvin.theme','marvin','theme','Internet explorer, Netscape, Opera',1,0);
+INSERT INTO system VALUES ('themes/xtemplate/xtemplate.theme','xtemplate','theme','Internet explorer, Netscape, Opera',1,0);
 
 INSERT INTO variable(name,value) VALUES('update_start', 's:10:"2003-10-27";');
-INSERT INTO variable(name,value) VALUES('theme_default','s:6:"marvin";');
+INSERT INTO variable(name,value) VALUES('theme_default','s:9:"xtemplate";');
 
 INSERT INTO users(uid,name,mail,rid) VALUES(0,'','','1');
 
